--- a/index.html
+++ b/index.html
@@ -597,7 +597,8 @@ MPRI website</a>.</p>
     <a href="https://github.com/micro-policies">Micro-Policies:
       Formally Verified, Tag-Based Security Monitors</a>
       (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
-       Nick Giannarakis, Benjamin C. Pierce, Antal Spector-Zabusky, and Andrew Tolmach)</li>
+       Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce,
+       Antal Spector-Zabusky, and Andrew Tolmach)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
