--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ MPRI website</a>.</p>
   a programming language with dynamic information flow control 
   and label-based access control</a> (with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
-  Benjamin C. Pierce, Jesse A. Tov, and others)</li>
+  Greg Morrisett, Benjamin C. Pierce, Jesse A. Tov, and others)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a> (with Thorsten Tarrach)</li>
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> (by Thorsten Tarrach)</li>
