--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@ MPRI website</a>.</p>
 
 </ul>
 
-<h2>Teaching</h2>
+<h2>Recent Teaching</h2>
+
+<p>For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a></b>, Lecture, Saarland University, 16-27 March 2015
@@ -451,52 +453,6 @@ MPRI website</a>.</p>
         <a href="talks/cis670-2011/step4.pdf">step4</a>
 	(2011-11-30 and 2011-12-05)</li>
     </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/10WS/Security/">Security</a></b>
-    - Core Lecture, Saarland University, Winter 2010/11.
-    Guest lecturer for 1 lecture:
-    <ul style="font-size: small">
-      <li><a href="talks/04-control-hijacking-defenses-2010.pdf">Control Hijacking: Defenses</a> (2010-10-28)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/SS09/PracticalSecurity/">Practical Aspects of Security</a></b>
-    - Advanced Lecture, Saarland University, Summer 2009<br/>
-    (<b>Best lecture award</b>).
-    Guest lecturer for 3 lectures:
-    <ul style="font-size: small">
-      <li><a href="talks/05-control-hijacking-defenses.pdf">Control Hijacking: Defenses</a> (2009-05-22)</li>
-      <li><a href="talks/04-control-hijacking-attacks.pdf">Control Hijacking Attacks</a> (2009-05-15)</li>
-      <li>Security problems in network protocols; TLS (2009-06-26)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/WS08/Seminar/seminar-selected.php">Selected Topics of Information Security and Cryptography</a></b>
-    - Seminar, Saarland University, Winter 2008/09.
-    Organizer; advised students on the following topic:
-    <ul>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/WS08/Seminar/reports/automated-checking-of-observational-equivalence-for-an-extended-spi-calculus.pdf">Observational Equivalence for Security Protocols</a></li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/WS07/Seminar/seminar-selected.php">Selected Topics of Information Security and Cryptography</a></b>
-    - Seminar, Saarland University, Winter 2007/08.
-    Organizer; advised students on the following topics:
-    <ul>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/WS07/Seminar/reports/civitas-proverif.pdf">The Analysis of Electronic Voting Protocols</a></li>
-      <li><a href="http://www.infsec.cs.uni-saarland.de/teaching/WS07/Seminar/reports/conspi.pdf">The Secure Implementation of Cryptographic Protocols</a></li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.ps.uni-saarland.de/courses/cl-ss07/">Introduction to Computational Logic</a></b>
-    - Core Lecture, Saarland University, Summer 2007.
-    Teaching assistant.
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://hritcu.wordpress.com/tutoring/language-based-security/">Language-based Security</a></b>
-    - Advanced Lecture, Saarland University, Winter 2006/07.
-    Teaching assistant; conducted weekly recitation sections.
   </li>
 </ul>
 
