--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ MPRI website</a>.</p>
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
-    To appear in ITP 2015. Report of June 2015.
+    In 6th International Conference on Interactive Theorem Proving (ITP), 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -257,7 +257,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
     Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
+    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. In <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a>; <a href="https://www.seas.upenn.edu/~aarthur/micro-policies-full.pdf">Long version</a></li>
   </ul>
