--- a/publications.html
+++ b/publications.html
@@ -265,17 +265,34 @@
 <ol start="26" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    Nikhil Swamy,
+    <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
+    <a href="https://www.cs.umd.edu/~aseem/">Aseem Rastogi</a>,
+    <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
+    <a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
+    <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
+    <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
+    <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
+    Jean-Karim Zinzindohoue.
+    <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    Submitted to POPL 2016.
+    Draft of July 2015.
+  <ul style="font-size: small">
+    <li>A previous draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Leonidas Lampropoulos,
+    Benjamin C. Pierce,
     C&#259;t&#259;lin Hri&#355;cu,
-    Chantal Keller,
-    Pierre-Yves Strub,
-    Aseem Rastogi,
-    Antoine Delignat-Lavaud,
-    Karthikeyan Bhargavan, and
-    C&eacute;dric Fournet.
-    <b><a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></b>.
-    <!-- Submitted to ICFP 2015. -->
-    Draft of March 2015.
+    John Hughes,
+    Zoe Paraskevopoulou,
+    Li-yao Xia.
+    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
+    Submitted to POPL 2016. Draft of July 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
@@ -286,6 +303,18 @@
     John Hughes,
     Benjamin C. Pierce, and
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. September 2014.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Arthur Azevedo de Amorim,
+    Nathan Collins,
+    André DeHon,
+    Delphine Demange,
+    C&#259;t&#259;lin Hri&#355;cu,
+    David Pichardie,
+    Benjamin C. Pierce,
+    Randy Pollack, and
+    Andrew Tolmach. <b><a href="/publications/verified-ifc-jcs.pdf">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
   </li>
 </ol>
 
