--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ MPRI website</a>.</p>
 <p>For a complete list of my publications please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;">
     <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
@@ -233,7 +234,7 @@ MPRI website</a>.</p>
     John Hughes,
     Zoe Paraskevopoulou,
     Li-yao Xia.
-    <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
+    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
     Submitted to POPL 2016. Draft of July 2015.
   </li>
 
@@ -291,7 +292,6 @@ MPRI website</a>.</p>
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. Revision of July 2015.
   </li>
 
-<!--
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Nathan Collins,
@@ -301,14 +301,8 @@ MPRI website</a>.</p>
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://www.crash-safe.org/node/29">A Verified Information-Flow Architecture</a></b>. In <a href="http://popl.mpi-sws.org/2014/">41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 165-178. ACM, January 2014.
-</!--
-  <ul style="font-size: small">
-    <li><a href="publications/verified-ifc-long-draft-2013-11-10.pdf">Long version</a></li>
-  </ul>
---/>
+    Andrew Tolmach. <b><a href="/publications/verified-ifc-jcs.pdf">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
   </li>
--->
 
 <!--
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
