--- a/publications.html
+++ b/publications.html
@@ -302,7 +302,7 @@
     Maxime Dénès,
     John Hughes,
     Benjamin C. Pierce, and
-    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. September 2014.
+    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. Revision of July 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
