--- a/publications.html
+++ b/publications.html
@@ -314,7 +314,7 @@
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="publications/verified-ifc-jcs.pdf">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
   </li>
 </ol>
 
