--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ a student could contribute:
 <!--(but there are many other possible ones):--></p>
 <ul>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: Verification system for ML turned proof assistant</a>
-(<a href="http://www.fstar-lang.org/">website</a>;
+(<a href="http://fstar.gforge.inria.fr/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
- <a href="https://www.fstar-lang.org/papers/mumon/">draft paper</a>)</li>
+ <a href="https://fstar.gforge.inria.fr/tutorial">tutorial</a>;
+ <a href="https://fstar.gforge.inria.fr/papers/mumon/">draft paper</a>)</li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/quick-chick.pdf">Luck: A language for property-based generators</a>
  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">draft paper</a>)
 
@@ -219,11 +219,11 @@ MPRI website</a>.</p>
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue.
-    <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    <b><a href="https://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     Submitted to POPL 2016.
     Draft of July 2015.
   <ul style="font-size: small">
-    <li>A previous draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
+    <li>A previous draft of the paper was entitled <a href="https://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
   </ul>
   </li>
 
@@ -344,7 +344,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
+  <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://fstar.gforge.inria.fr/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
       <li><b>Recent:</b> <a href="http://cufp.org/2015/">
@@ -526,7 +526,7 @@ MPRI website</a>.</p>
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.fstar-lang.org">F*: Verification system for
+    <a href="https://fstar.gforge.inria.fr">F*: Verification system for
       ML turned proof assistant</a> (with Nikhil Swamy, Chantal
       Keller, Aseem Rastogi, Antoine Delignat-Lavaud, Simon Forest,
       Karthik Bhargavan, Cédric Fournet, and others)</li>
