--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a student could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: Verification system for ML turned proof assistant</a>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
 (<a href="http://fstar.gforge.inria.fr/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://fstar.gforge.inria.fr/tutorial">tutorial</a>;
