--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li><a href="#students">Searching for Students</a></li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
   <ul>
   <li>Abstract submission: October 7, 2015</li>
