--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ a student could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://fstar.gforge.inria.fr/tutorial">tutorial</a>;
  <a href="https://fstar.gforge.inria.fr/papers/mumon/">draft paper</a>)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/quick-chick.pdf">Luck: A language for property-based generators</a>
- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">draft paper</a>)
+  <li style="margin-bottom: 1ex;">Luck: A language for property-based generators</a>
+ (<a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper</a>, <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/quick-chick.pdf">last year's proposal</a>)
 
 <!--
   <ul>
