--- a/publications.html
+++ b/publications.html
@@ -276,11 +276,11 @@
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue.
-    <b><a href="https://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    <b><a href="http://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     Submitted to POPL 2016.
     Draft of July 2015.
   <ul style="font-size: small">
-    <li>A previous draft of the paper was entitled <a href="https://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
+    <li>A previous draft of the paper was entitled <a href="http://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
   </ul>
   </li>
 
