--- a/index.html
+++ b/index.html
@@ -454,14 +454,9 @@ MPRI website</a>.</p>
 <h2 id="students">Advised Students</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a>
-   Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a>   
   <ul>
-    <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant (2015-10 to 2018-10)
-    </li>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
-      <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
-    </li>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05</li>
   </ul>
   </li>
 
