--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@ MPRI website</a>.</p>
 <h2 id="students">Advised Students</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a>   
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05</li>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05</li>: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a>
   </ul>
   </li>
 
