--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05</li>: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2015-12 to 2016-05: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a></li>
   </ul>
   </li>
 
