--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10: Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
+    <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
     <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
       <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
