--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Catalin Hritcu - Inria Paris-Rocquencourt</title>
+	<title>Catalin Hritcu - Inria Paris</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 <!-- Starting in October 2013 -->
 Researcher (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_Positions">chargé de recherche</a>)
 at <a href="https://www.inria.fr/en/">Inria</a>
-<a href="https://www.inria.fr/en/centre/paris-rocquencourt">Paris-Rocquencourt</a> in the
+<a href="https://www.inria.fr/en/centre/paris-rocquencourt">Paris</a> in the
 <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
 
 <p style="width:42em; text-align: left">
