--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <p style="width:42em; text-align: left">
 <!-- Starting in October 2013 -->
 Researcher (<a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_Positions">chargé de recherche</a>)
-at <a href="https://www.inria.fr/en/">Inria</a>
-<a href="https://www.inria.fr/en/centre/paris-rocquencourt">Paris</a> in the
-<a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
+at <a href="https://www.inria.fr/en/centre/paris-rocquencourt">Inria Paris</a>
+in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
 
 <p style="width:42em; text-align: left">
 Between May 2011 and September 2013 I was Research Associate at
