--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@ MPRI website</a>.</p>
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="http://fstar.gforge.inria.fr">F*: Verification system for
-      ML turned proof assistant</a> (with Nikhil Swamy, Chantal
+    <a href="http://fstar.gforge.inria.fr">F*: From Program Verification System
+      to Proof Assistant</a> (with Nikhil Swamy, Chantal
       Keller, Aseem Rastogi, Antoine Delignat-Lavaud, Simon Forest,
       Karthik Bhargavan, Cédric Fournet, and others)</li>
 
