--- a/micro-policies.html
+++ b/micro-policies.html
@@ -27,20 +27,20 @@ with unified verification and testing tools, and implemented
 efficiently using programmable metadata-propagation hardware. The
 Micro-Policies project is broad and ambitious, demanding integration
 of expertise from security, formal verification, property-based
-testing, and hardware design; our team gathers significant expertise
-in these four directions.
+testing, compilers, and hardware design; our team gathers significant expertise
+in these five directions.
 </p>
 
 <h3>Participants</h3>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a> (Inria Paris-Rocquencourt, EPI Prosecco)
+     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a> (Inria Paris, EPI Prosecco)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="http://www.cis.upenn.edu/~bcpierce/">Prof. Benjamin C. Pierce</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a> (Inria Paris-Rocquencourt, EPI Prosecco)
+    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a> (Inria Paris, EPI Prosecco)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="http://www.seas.upenn.edu/~andre/">Prof. André DeHon</a> (University of Pennsylvania)
@@ -54,21 +54,10 @@ in these four directions.
     EPI Prosecco intern March -- August 2014)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.maximedenes.fr/">Maxime Dénès</a> (Inria Paris-Rocquencourt, EPI Gallium)
-  </li>
-  <li style="margin-bottom: 1ex;">
     <a href="http://www.seas.upenn.edu/~udit/">Udit Dhawan</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/nickgian">Nick Giannarakis</a>
-    (MPRI student, EPI Prosecco intern April -- September 2014)
-  </li>
-  <li style="margin-bottom: 1ex;">
     <a href="https://github.com/lemonidas">Leonidas Lambropoulos</a> (University of Pennsylvania)
-  </li>
-  <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/zoep">Zoe Paraskevopoulou</a>
-    (MPRI student, EPI Prosecco intern April -- September 2014)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/antalsz">Antal Spector-Zabusky</a> (University of Pennsylvania,
@@ -76,8 +65,11 @@ in these four directions.
   </li>
 </ul>
 
-<h3>Github</h3>
+<h3>Links</h3>
 <ul style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">
+     <a href="http://www.crash-safe.org/">http://www.crash-safe.org/</a>
+  </li>
   <li style="margin-bottom: 1ex;">
      <a href="https://github.com/micro-policies">https://github.com/micro-policies</a>
   </li>
