--- a/micro-policies.html
+++ b/micro-policies.html
@@ -34,24 +34,22 @@ in these five directions.
 <h3>Participants</h3>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a> (Inria Paris, EPI Prosecco)
+     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a> (CR, Inria Paris, EPI Prosecco)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.cis.upenn.edu/~bcpierce/">Prof. Benjamin C. Pierce</a> (University of Pennsylvania)
+    <a href="http://www.cis.upenn.edu/~bcpierce/">Benjamin C. Pierce</a> (Professor, University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a> (Inria Paris, EPI Prosecco)
+    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a> (DR, Inria Paris, EPI Prosecco)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.seas.upenn.edu/~andre/">Prof. André DeHon</a> (University of Pennsylvania)
+    <a href="http://www.seas.upenn.edu/~andre/">André DeHon</a> (Professor University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://web.cecs.pdx.edu/~apt/">Prof. Andrew Tolmach</a> (Portland State University,
-    Chair Digiteo at Paris-Sud September 2014 -- August 2015)
+    <a href="http://web.cecs.pdx.edu/~apt/">Prof. Andrew Tolmach</a> (Portland State University)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (University of Pennsylvania,
-    EPI Prosecco intern March -- August 2014)
+    <a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="http://www.seas.upenn.edu/~udit/">Udit Dhawan</a> (University of Pennsylvania)
