--- a/micro-policies.html
+++ b/micro-policies.html
@@ -46,7 +46,7 @@ in these five directions.
     <a href="http://www.seas.upenn.edu/~andre/">André DeHon</a> (Professor University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="http://web.cecs.pdx.edu/~apt/">Andrew Tolmach</a> (Portland State University)
+    <a href="http://web.cecs.pdx.edu/~apt/">Andrew Tolmach</a> (Professor, Portland State University)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (University of Pennsylvania)
