--- a/micro-policies.html
+++ b/micro-policies.html
@@ -58,8 +58,7 @@ in these five directions.
     <a href="https://github.com/lemonidas">Leonidas Lambropoulos</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/antalsz">Antal Spector-Zabusky</a> (University of Pennsylvania,
-    Computer Science)
+    <a href="https://github.com/antalsz">Antal Spector-Zabusky</a> (University of Pennsylvania)
   </li>
 </ul>
 
