--- a/micro-policies.html
+++ b/micro-policies.html
@@ -46,6 +46,12 @@ in these five directions.
     <a href="http://www.seas.upenn.edu/~andre/">André DeHon</a> (Professor University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
+    <a href="https://people.csail.mit.edu/hes/">Howard E. Shrobe</a> (Principal Research Scientist, MIT)
+  </li>
+  <li style="margin-bottom: 1ex;">
+    <a href="https://people.csail.mit.edu/stelios/">Stelios Sidiroglou-Douskos</a> (Research Scientist, MIT)
+  </li>
+  <li style="margin-bottom: 1ex;">
     <a href="http://web.cecs.pdx.edu/~apt/">Andrew Tolmach</a> (Professor, Portland State University)
   </li>
   <li style="margin-bottom: 1ex;">
