--- a/micro-policies.html
+++ b/micro-policies.html
@@ -32,6 +32,7 @@ in these five directions.
 </p>
 
 <h3>Participants</h3>
+Permanent researchers:
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a> (CR, Inria Paris, EPI Prosecco)
@@ -54,6 +55,9 @@ in these five directions.
   <li style="margin-bottom: 1ex;">
     <a href="http://web.cecs.pdx.edu/~apt/">Andrew Tolmach</a> (Professor, Portland State University)
   </li>
+</ul>
+PhD students:
+<ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     <a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (University of Pennsylvania)
   </li>
@@ -61,7 +65,13 @@ in these five directions.
     <a href="http://www.seas.upenn.edu/~udit/">Udit Dhawan</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
+    <a href="http://yannis.computer/">Yannis Juglaret</a> (University Paris 7 and Inria Paris, EPI Prosecco)
+  </li>
+  <li style="margin-bottom: 1ex;">
     <a href="https://github.com/lemonidas">Leonidas Lambropoulos</a> (University of Pennsylvania)
+  </li>
+  <li style="margin-bottom: 1ex;">
+    <a href="">Nick Roessler</a> (University of Pennsylvania)
   </li>
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/antalsz">Antal Spector-Zabusky</a> (University of Pennsylvania)
