--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ MPRI website</a>.</p>
 
       <li>Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
 
-      <li><a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a>: <a href="talks/Micro-Policies-Rennes.pdf">slides</a> (2015-06-19)</li>
+      <li><a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes - DGA Seminar on Formal Methods and Security</a>: <a href="talks/Micro-Policies-Rennes.pdf">slides</a> (2015-06-19)</li>
 
       <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
       <li>Inria Prosecco evaluation: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
