--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="#students">Searching for Students</a></li>
+  <li style="margin-bottom: 1ex;">Computer Security Foundations Symposium, CSF 2016 (PC member)
+  <ul>
+  <li>Submission deadline: February 12, 2016</li>
+  </ul>
+  </li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
   <ul>
   <li>Abstract submission: October 7, 2015</li>
