--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="#students">Searching for Students</a></li>
   <li style="margin-bottom: 1ex;">Computer Security Foundations Symposium, CSF 2016 (PC member)
   <ul>
-  <li>Submission deadline: February 12, 2016</li>
+  <!-- <li>Submission deadline: February 12, 2016</li> -->
   </ul>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
