--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ MPRI website</a>.</p>
       <em>programming-languages techniques</em>:
       rigorous semantics,
       type systems,
+      proof assistants,
       verification,
       automatic testing,
       formal metatheory,
