--- a/index.html
+++ b/index.html
@@ -214,6 +214,18 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Yannis Juglaret and
+            C&#259;t&#259;lin Hri&#355;cu and
+            Arthur Azevedo de Amorim and
+            Benjamin C. Pierce and
+            Antal Spector-Zabusky and
+            Andrew Tolmach.
+    <a href="">Towards a Fully Abstract Compiler Using Micro-Policies:
+               Secure Compilation for Mutually Distrustful Components</a>
+    Technical Report, arXiv, 2 October 2015.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
