--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ MPRI website</a>.</p>
             Benjamin C. Pierce and
             Antal Spector-Zabusky and
             Andrew Tolmach.
-    <a href="">Towards a Fully Abstract Compiler Using Micro-Policies:
-               Secure Compilation for Mutually Distrustful Components</a>
+    <b><a href="">Towards a Fully Abstract Compiler Using Micro-Policies:
+               Secure Compilation for Mutually Distrustful Components</a></b>
     Technical Report, arXiv, 2 October 2015.
   </li>
 
