--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ MPRI website</a>.</p>
             Antal Spector-Zabusky and
             Andrew Tolmach.
     <b><a href="">Towards a Fully Abstract Compiler Using Micro-Policies:
-               Secure Compilation for Mutually Distrustful Components</a></b>
+               Secure Compilation for Mutually Distrustful Components</a></b>.
     Technical Report, arXiv, 2 October 2015.
   </li>
 
