--- a/index.html
+++ b/index.html
@@ -220,9 +220,10 @@ MPRI website</a>.</p>
             Benjamin C. Pierce and
             Antal Spector-Zabusky and
             Andrew Tolmach.
-    <b><a href="">Towards a Fully Abstract Compiler Using Micro-Policies:
-               Secure Compilation for Mutually Distrustful Components</a></b>.
-    Technical Report, arXiv, 2 October 2015.
+    <b><a href="http://arxiv.org/abs/1510.00697">
+          Towards a Fully Abstract Compiler Using Micro-Policies:
+          Secure Compilation for Mutually Distrustful Components</a></b>.
+    Technical Report, arXiv:1510.00697, 2 October 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
