--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ MPRI website</a>.</p>
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue.
     <b><a href="http://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
-    Submitted to POPL 2016.
+    To appear at POPL 2016.
     Draft of July 2015.
   <ul style="font-size: small">
     <li>A previous draft of the paper was entitled <a href="http://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
@@ -254,7 +254,7 @@ MPRI website</a>.</p>
     Zoe Paraskevopoulou,
     Li-yao Xia.
     <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
-    Submitted to POPL 2016. Draft of July 2015.
+    Draft of July 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
