--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,26 @@
 <ol start="5" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
+    <a href="https://www.cs.umd.edu/~aseem/">Aseem Rastogi</a>,
+    <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
+    <a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
+    <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
+    <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
+    <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
+    Jean-Karim Zinzindohoue.
+    <b><a href="http://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    To appear at POPL 2016.
+    Draft of July 2015.
+  <ul style="font-size: small">
+    <li>A previous draft of the paper was entitled <a href="http://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
@@ -265,26 +285,6 @@
 <ol start="26" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
-    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
-    <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
-    <a href="https://www.cs.umd.edu/~aseem/">Aseem Rastogi</a>,
-    <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
-    <a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>,
-    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
-    <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
-    <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
-    <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
-    Jean-Karim Zinzindohoue.
-    <b><a href="http://fstar.gforge.inria.fr/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
-    Submitted to POPL 2016.
-    Draft of July 2015.
-  <ul style="font-size: small">
-    <li>A previous draft of the paper was entitled <a href="http://fstar.gforge.inria.fr/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
     Leonidas Lampropoulos,
     Benjamin C. Pierce,
     C&#259;t&#259;lin Hri&#355;cu,
@@ -292,7 +292,7 @@
     Zoe Paraskevopoulou,
     Li-yao Xia.
     <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
-    Submitted to POPL 2016. Draft of July 2015.
+    Draft of July 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
