--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ MPRI website</a>.</p>
     <b><a href="http://arxiv.org/abs/1510.00697">
           Towards a Fully Abstract Compiler Using Micro-Policies:
           Secure Compilation for Mutually Distrustful Components</a></b>.
-    Technical Report, arXiv:1510.00697, 2 October 2015.
+    Technical Report, arXiv:1510.00697, October 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
