--- a/publications.html
+++ b/publications.html
@@ -285,6 +285,19 @@
 <ol start="27" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Yannis Juglaret and
+            C&#259;t&#259;lin Hri&#355;cu and
+            Arthur Azevedo de Amorim and
+            Benjamin C. Pierce and
+            Antal Spector-Zabusky and
+            Andrew Tolmach.
+    <b><a href="http://arxiv.org/abs/1510.00697">
+          Towards a Fully Abstract Compiler Using Micro-Policies:
+          Secure Compilation for Mutually Distrustful Components</a></b>.
+    Technical Report, arXiv:1510.00697, October 2015.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Leonidas Lampropoulos,
     Benjamin C. Pierce,
     C&#259;t&#259;lin Hri&#355;cu,
