--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="#students">Searching for Students</a></li>
-  <li style="margin-bottom: 1ex;">Interactive Theorem Proving, ITP 2016 (PC member)
+  <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive Theorem Proving, ITP 2016</a> (PC member)
   <ul>
-  <!-- <li>Submission deadline: ???, 2016</li> -->
+  <li>Abstract deadline: 29 February, 2016</li>
+  <li>Submission deadline: 4 March, 2016</li>
   </ul>
   </li>
   <li style="margin-bottom: 1ex;">Computer Security Foundations Symposium, CSF 2016 (PC member)
