--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@ MPRI website</a>.</p>
     Benjamin C. Pierce,
     Randy Pollack, and
     Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
+  </ul>
   </li>
 
 <!--
