--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
-  <ul>
-  <li>Abstract submission: October 7, 2015</li>
-  <li>Submission deadline: October 14, 2015</li>
-  </ul>
+  <!-- <ul> -->
+  <!-- <li>Abstract submission: October 7, 2015</li> -->
+  <!-- <li>Submission deadline: October 14, 2015</li> -->
+  <!-- </ul> -->
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
