--- a/index.html
+++ b/index.html
@@ -128,9 +128,12 @@ a student could contribute:
 (<a href="https://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
- <a href="https://www.fstar-lang.org/papers/mumon/">draft paper</a>)</li>
+ <a href="https://www.fstar-lang.org/papers/mumon/">paper</a>)</li>
   <li style="margin-bottom: 1ex;">Luck: A language for property-based generators</a>
- (<a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper</a>, <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/quick-chick.pdf">last year's proposal</a>)
+  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">proposal</a>,
+   <a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
+   <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
+   <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>)
   </li>
 
 <!--
