--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a student could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/papers/mumon/">paper</a>)</li>
-  <li style="margin-bottom: 1ex;"></a>
+  <li style="margin-bottom: 1ex;">QuickChick: Property-Based Testing for Coq</a>
   (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">proposal</a>,
    <a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
