--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ a student could contribute:
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">QuickChick: Property-Based Testing for Coq</a></a>
   (<a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
-   <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>),
-   <a href="https://github.com/FStarLang/FStar">code</a>
+   <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>,
+   <a href="https://github.com/FStarLang/FStar">code</a>)
   </li>
 
 <!--
