--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a student could contribute:
   (<a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>,
-   <a href="https://github.com/FStarLang/FStar">code</a>)
+   <a href="https://github.com/QuickChick">code</a>)
   </li>
 
 <!--
