--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ a student could contribute:
    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>,
    <a href="https://github.com/QuickChick">code</a>)
   </li>
+</ul>
 
 <!--
   <ul>
@@ -142,7 +143,6 @@ a student could contribute:
   </ul>
 -->
   <!-- <li style="margin-bottom: 1ex;"><a href="students/topics/2015/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a> (<a href="https://github.com/micro-policies">code</a>)</li> -->
-</ul>
 
 <!--
 <p style="width:42em; text-align: left">
@@ -246,7 +246,8 @@ MPRI website</a>.</p>
     <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
-    Jean-Karim Zinzindohoue.
+    Jean-Karim Zinzindohoue,
+    Santiago Zanella Béguelin.
     <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     To appear at POPL 2016.
     Draft of July 2015.
