--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,8 @@
     <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
-    Jean-Karim Zinzindohoue.
+    Jean-Karim Zinzindohoue,
+    Santiago Zanella Béguelin.
     <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     To appear at POPL 2016.
     Draft of July 2015.
