--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ MPRI website</a>.</p>
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue,
-    Santiago Zanella Béguelin.
+    Santiago Zanella-B&eacute;guelin.
     <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     To appear at POPL 2016.
     Draft of July 2015.
