--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Cambridge</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="#students">Searching for Students</a></li>
-  <li><a href="">Hammers for Type Theories, HaTT 2016 (PC member)</li>
+  <!-- <li><a href="">Hammers for Type Theories, HaTT 2016 (PC member)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive Theorem Proving, ITP 2016</a> (PC member)
   <ul>
