--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
-  <!-- <ul> -->
+  <ul>
+    <li>Takes place January 18-19, 2016 Saint Petersburg, Florida, USA<br/>
+        (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li>
   <!-- <li>Abstract submission: October 7, 2015</li> -->
   <!-- <li>Submission deadline: October 14, 2015</li> -->
-  <!-- </ul> -->
+  </ul>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
