--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Research Cambridge</a>.</p>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
   <ul>
-    <li>Takes place January 18-19, 2016 Saint Petersburg, Florida, USA<br/>
+    <li>Takes place January 18-19, 2016 in Saint Petersburg, Florida, USA<br/>
         (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li>
   <!-- <li>Abstract submission: October 7, 2015</li> -->
   <!-- <li>Submission deadline: October 14, 2015</li> -->
