--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@ a student could contribute:
    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">draft paper #3</a>,
    <a href="https://github.com/QuickChick">code</a>)
   </li>
+  <li style="margin-bottom: 1ex;">Efficient Formally Secure Compilers to a Tagged Architecture</a>
+  (<a href="http://arxiv.org/abs/1510.00697">draft paper #1</a>,
+   <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">paper #2</a>,
+   <a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">paper #3</a>,
+   <a href="https://github.com/micro-policies">code</a>)</li>
 </ul>
 
 <!--
