--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Research Cambridge</a>.</p>
 <p style="width:42em; text-align: left">
 I am looking for talented, highly motivated students, for research
 internships, MSc and PhD theses, etc. Here are three projects to which
-a student could contribute:
+students could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
