--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ MPRI website</a>.</p>
       Karthik Bhargavan, Cédric Fournet, and others)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">Luck: A Domain Specific Language For Property-Based Generators</a>
+    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Luck: A Domain Specific Language For Property-Based Generators</a>
     (with Leonidas Lampropoulos, Li-yao Xia, Benjamin C. Pierce,
      John Hughes, and Zoe Paraskevopoulou)</li>
 
