--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ Research Cambridge</a>.</p>
 <h2>Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>Address:</i>
-  <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, <a href="https://maps.google.com/maps?q=23+Avenue+d'Italie,+75013+Paris,+France">23 Avenue d'Italie, 75013 Paris, France</a></p>
-<p><i>Office:</i> <strong>#31</strong> (5th floor)</p>
+  <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, <a href="https://www.google.com/maps/place/41+Rue+du+Charolais,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a></p>
+<p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
 
 <!--
 <h2 id="new-students">Current Research Projects</h2>
